kubernetes/apps/prod/loki/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_LOKI}.${DOMAIN}"
    gethomepage.dev/description: Logging system.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: loki.png
    gethomepage.dev/name: Loki
    gethomepage.dev/app: loki
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_LOKI}.${DOMAIN}`)
      services:
        - kind: Service
          name: loki
          namespace: monitoring
          port: 3100
  tls:
    secretName: loki.${DOMAIN}
